...
        }
    }

    Column(
        modifier = Modifier
            .fillMaxWidth()
            .testTag("android_home_administration"),
        verticalArrangement = Arrangement.spacedBy(10.dp),
    ) {
        Text(
            text = stringResource(R.string.android_home_admin_title),
            style = MaterialTheme.typography.titleMedium,
        )
...
